page number is in correct place, but now when a category is removed there is a break on the first page wtf

--- a/ProductAdministrationSystem/Content/sass/print.scss
+++ b/ProductAdministrationSystem/Content/sass/print.scss
@@ -16,14 +16,13 @@
       }
     }
 
-
     .page_number {
       display: block;
       position: relative;
       span {
         position: absolute;
-        bottom: 0;
-        left:0;
+        top: 6.75in;
+        left: 6in;
       }
     }
 
